<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="appNameShort">Meditation Assistant</string>
    <string name="about">About</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="openWith">Open with</string>
    <string name="delete">Delete</string>
    <string name="sessions">Sessions</string>
    <string name="community">Community</string>
    <string name="forum">Forum</string>
    <string name="rate">Rate</string>
    <string name="refresh">Refresh</string>
    <string name="page">Page</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="account">Account</string>
    <string name="groups">Groups</string>
    <string name="announcement">Announcement</string>
    <string name="installFileManager">Please install a file manager</string>
    <string name="disableBatteryOptimizations">Meditation Assistant must run in the background</string>
    <string name="permissionRequest">Permission Request</string>
    <string name="permissionRequired">This permission is required.</string>
    <string name="permissionRequestNotificationControl">Please grant access on the next screen to control Do Not Disturb.</string>
    <string name="deny">Deny</string>
    <string name="tryAgain">Try Again</string>
    <string name="timer">Timer</string>
    <string name="timerHelp">Welcome to a brief tutorial. This is the session timer. Tap it now to change the timer mode and duration.</string>
    <string name="editTimerHelp">Your session may be a specific duration, may last until a specific time of day, or may not be timed at all.\n\nPresets may be used to store common configurations. Press and hold a preset to remember the current session duration. Sounds and other settings may also be remembered by presets by enabling them in "Preset Settings".\n\nAfter tapping OK, tap Cancel or Confirm to continue.</string>
    <string name="settingsHelp">This application includes numerous features and customizations. Tap the Settings icon to see these options.</string>
    <string name="medinetHelp">Sign in to MediNET to save your sessions online. You can import your sessions later if you lose your data. This feature is entirely optional, storing sessions locally will not hinder your experience.\n\nThis concludes the tutorial. I hope that Meditation Assistant will be beneficial for your practice.</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="confirm">Confirm</string>
    <string name="meditate">Meditate</string>
    <string name="tapToSkip">Skip</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="end">End</string>
    <string name="pauseOrEnd">Pause or end</string>
    <string name="resumeOrEnd">Resume or end</string>
    <string name="pausedNotification">Session paused, hold to end</string>
    <string name="mediNETConnecting">Connecting…</string>
    <string name="mediNETConnected">Connected to MediNET</string>
    <string name="sessionInProgress">Session in progress</string>
    <string name="sessionPaused">Session paused</string>
    <string name="progress">Progress</string>
    <string name="setPreset">Set preset</string>
    <string name="setPresetHint">Hold to set preset</string>
    <string name="setPresetTip">Choose which settings to restore by tapping the gear icon (Settings), then tap Preset settings.</string>
    <string name="setPresetHintBlank">Enter a duration (or end time) to set preset</string>
    <string name="setVibrationTip">Enter the number of milliseconds to turn the vibrator on or off, separated by commas.</string>
    <string name="configureWidget">Configure Widget</string>
    <string name="label">Label</string>
    <string name="pattern">Pattern</string>
    <string name="setTimerDurationHint">Enter a valid duration (e.g. 0:22)</string>
    <string name="setTimerEndAtHint">Enter a valid time (e.g. 4:20)</string>
    <string name="invalidEndAt">Invalid time to end session</string>
    <string name="timed">Timed</string>
    <string name="endAt">End at</string>
    <string name="untimed">Untimed</string>
    <string name="unlimited">Unlimited</string>
    <string name="presetLabelEndAt">End %s</string>
    <string name="resources">Resources</string>
    <string name="mindfulnessBell">Mindfulness bell</string>
    <string name="mindfulnessBellActive">Mindfulness bell active</string>
    <string name="interval">Interval</string>
    <string name="deactivate">Deactivate</string>
    <string name="howToMeditate">How to meditate</string>
    <string name="meditationSubreddit">Reddit community</string>
    <string name="whatIsMediNET">MediNET overview</string>
    <string name="whatIsMediNETHelp">MediNET is an online meditation session repository and community.\n\nYou may choose to store your sessions on MediNET to prevent data loss and/or to share your progress with others online.\n\nYou may instead choose to store session data on the device only.</string>
    <string name="replayTutorial">Replay tutorial</string>
    <string name="tapToLearnMore">Tap anywhere to learn more</string>
    <string name="sendEmail">Send email</string>
    <string name="version">Version %s</string>
    <string name="translate">Translate</string>
    <string name="donate">Donate</string>
    <string name="chooseDonationMethod">Please choose how you would like to donate.\n\nLiberapay is preferred by the developer and supports more countries and currencies.</string>
    <string name="share">Share</string>
    <string name="sourceRepository">Source Code Repository</string>
    <string name="invitationBlurb">Meditation Assistant is a fully featured companion to your practice.</string>
    <string name="session">Session</string>
    <string name="sessionDeleteEverywhere">Delete everywhere</string>
    <string name="sessionDeleteLocally">Delete locally</string>
    <string name="sessionDeleteMediNET">Delete on MediNET</string>
    <string name="pref_sessionintro">Introduction</string>
    <string name="presetsettings">Preset settings</string>
    <string name="modeandduration">Mode and duration</string>
    <string name="streakdifferencewarning">Your current meditation streak does not seem correct based on current session data. Use updated meditation streak?\n\nCurrent streak: %1$d\nUpdated streak: %2$d</string>
    <string name="postUpdatedSession">Post updated session to MediNET?</string>
    <string name="sessioncomplete">Session Complete</string>
    <string name="sessionMessagePlaceholder">Message</string>
    <string name="askDiscardText">Discard session?</string>
    <string name="sessionPosting">Posting session…</string>
    <string name="sessionPosted">Session posted to MediNET</string>
    <string name="sessionAlreadyPosted">Session already posted</string>
    <string name="sessionNotPosted">Unable to post session</string>
    <string name="sessionNotPostedMeditating">Unable to post session while meditating</string>
    <string name="sessionSaved">Session saved</string>
    <string name="sessionDeletedLocally">Session deleted locally</string>
    <string name="browser">Browser</string>
    <string name="useBrowser">Use browser:</string>
    <string name="signInWith">Sign in with…</string>
    <string name="signInWithProvider">Sign in with %s…</string>
    <string name="signInWithOpenID">OpenID - Facebook, Twitter, etc.</string>
    <string name="signInGoogleError">Unable to authenticate using account manager. Try OpenID if this error persists.</string>
    <string name="calendar">Calendar</string>
    <string name="statistics">Statistics</string>
    <string name="totalTimeSpentMeditating">Total time spent meditating</string>
    <string name="dayMondayShort">Mon</string>
    <string name="dayTuesdayShort">Tue</string>
    <string name="dayWednesdayShort">Wed</string>
    <string name="dayThursdayShort">Thu</string>
    <string name="dayFridayShort">Fri</string>
    <string name="daySaturdayShort">Sat</string>
    <string name="daySundayShort">Sun</string>
    <string name="addSession">Add session</string>
    <string name="editSession">Edit session</string>
    <string name="sessionAdded">Session added</string>
    <string name="sessionEdited">Session edited</string>
    <string name="add">Add</string>
    <string name="meditation">Meditation</string>
    <string name="pref_vibrate_summary">Occurs at the beginning, intervals, and end of meditation</string>
    <string name="pref_vibrate_reminder_summary">The daily reminder will vibrate the device</string>
    <string name="pref_sound_reminder">Play sound</string>
    <string name="pref_sound_reminder_summary">The default notification sound will be played</string>
    <string name="pref_softfinish">Endless session</string>
    <string name="pref_softfinish_summary">Keep the timer running</string>
    <string name="settings">Settings</string>
    <string name="pref_display_seconds">Display seconds</string>
    <string name="pref_display_seconds_summary">Shown below the main timer</string>
    <string name="pref_meditationstreakbuffer">Streak resets at</string>
    <string name="pref_full_screen">Full screen</string>
    <string name="pref_delay">Delay</string>
    <string name="pref_interval">Interval duration</string>
    <string name="pref_interval_count">Interval count</string>
    <string name="pref_autosignin_summary">Connect to MediNET when opened</string>
    <string name="pref_autosignin">Automatically connect</string>
    <string name="pref_rememberme_summary">Remain signed in after closed</string>
    <string name="pref_rememberme">Remember me</string>
    <string name="pref_screencontrol">Screen</string>
    <string name="pref_showstreak">Display meditation streak</string>
    <string name="pref_showstreak_summary">Number of consecutive days with at least one recorded session</string>
    <string name="pref_meditation_sound_start">Start sound</string>
    <string name="pref_meditation_sound_interval">Interval sound</string>
    <string name="pref_meditation_sound_finish">Complete sound</string>
    <string name="pref_remembermessage">Remember last message</string>
    <string name="pref_remembermessage_summary">Default to the previous message</string>
    <string name="pref_notification">Notification</string>
    <string name="pref_notification_summary">Shown during meditation while away from the main window</string>
    <string name="pref_usetimepicker">Alternative duration interface</string>
    <string name="pref_usetimepicker_summary">Use hour and minute sliders when changing duration</string>
    <string name="pref_askdismiss">Ask before discard</string>
    <string name="pref_askdismiss_summary">Confirm before discarding a session</string>
    <string name="pref_mainbuttons">Hide buttons</string>
    <string name="pref_progresstab">Default tab</string>
    <string name="exportsessions">Export sessions</string>
    <string name="exportsessions_summary">Export CSV file</string>
    <string name="importsessions">Import sessions</string>
    <string name="importsessions_summary">Import CSV file</string>
    <string name="uploadsessions">Upload sessions</string>
    <string name="uploadsessions_summary">Upload local sessions</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pref_text_size">Timer size</string>
    <string name="pref_notificationcontrol">Ringtone and notifications</string>
    <string name="pref_daily_reminder">Daily reminder</string>
    <string name="pref_daily_reminder_title">Remind me</string>
    <string name="pref_daily_reminder_summary">Display a notification when no sessions were recorded today</string>
    <string name="pref_daily_reminder_time">Time</string>
    <string name="pref_daily_reminder_text">Encouragement text</string>
    <string name="mediNET">MediNET</string>
</resources>