<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_display_seconds"
        android:summary="@string/pref_display_seconds_summary"
        android:title="@string/pref_display_seconds"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_showstreak"
        android:summary="@string/pref_showstreak_summary"
        android:title="@string/pref_showstreak"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_notification"
        android:summary="@string/pref_notification_summary"
        android:title="@string/pref_notification"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_usetimepicker"
        android:summary="@string/pref_usetimepicker_summary"
        android:title="@string/pref_usetimepicker"/>

    <ListPreference
        android:defaultValue="dim"
        android:dialogIcon="?attr/actionIconBrightnessLow"
        android:entries="@array/screencontrol"
        android:entryValues="@array/screencontrol_values"
        android:key="pref_screencontrol"
        android:title="@string/pref_screencontrol"/>

    <ListPreference
        android:defaultValue=""
        android:dialogIcon="?attr/actionIconFullScreen"
        android:entries="@array/full_screen"
        android:entryValues="@array/full_screen_values"
        android:key="pref_full_screen"
        android:title="@string/pref_full_screen"/>

    <ListPreference
        android:defaultValue="normal"
        android:entries="@array/text_sizes"
        android:entryValues="@array/text_sizes_values"
        android:key="pref_text_size"
        android:summary=""
        android:title="@string/pref_text_size"/>

    <ListPreference
        android:defaultValue="calendar"
        android:entries="@array/progresstabs"
        android:entryValues="@array/progresstabs_values"
        android:key="pref_progresstab"
        android:summary=""
        android:title="@string/pref_progresstab"/>

    <MultiSelectListPreference
        android:entries="@array/mainbuttons"
        android:entryValues="@array/mainbuttons_values"
        android:defaultValue="@array/empty_array"
        android:key="pref_mainbuttons"
        android:summary=""
        android:title="@string/pref_mainbuttons"/>

</PreferenceScreen>
