<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_daily_reminder"
        android:summary="@string/pref_daily_reminder_summary"
        android:title="@string/pref_daily_reminder_title" />

    <CheckBoxPreference
        android:dependency="pref_daily_reminder"
        android:defaultValue="true"
        android:key="pref_sound_reminder"
        android:summary="@string/pref_sound_reminder_summary"
        android:title="@string/pref_sound_reminder" />

    <CheckBoxPreference
        android:dependency="pref_daily_reminder"
        android:defaultValue="true"
        android:key="pref_vibrate_reminder"
        android:summary="@string/pref_vibrate_reminder_summary"
        android:title="@string/pref_vibrate" />

    <EditTextPreference
        android:dependency="pref_daily_reminder"
        android:defaultValue=""
        android:key="pref_daily_reminder_text"
        android:summary=""
        android:title="@string/pref_daily_reminder_text" />

    <sh.ftp.rocketninelabs.meditationassistant.TimePreference
        android:dependency="pref_daily_reminder"
        android:defaultValue="19:00"
        android:key="pref_daily_reminder_time"
        android:title="@string/pref_daily_reminder_time"
        app:is24hour="false" />

</PreferenceScreen>
