<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MediNETActivity">

    <item
        android:id="@+id/refreshMediNET"
        android:icon="?attr/actionIconRefresh"
        android:title="@string/refresh"
        tools:ignore="AlwaysShowAction"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuMediNET"
        android:icon="?attr/actionIconSortBySize"
        android:title="@string/page"
        tools:ignore="AlwaysShowAction"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menuMediNETCommunity"
                android:icon="?attr/actionIconWebsite"
                android:title="@string/community"
                app:showAsAction="never" />
            <item
                android:id="@+id/menuMediNETSessions"
                android:icon="?attr/actionIconViewAsList"
                android:title="@string/sessions"
                app:showAsAction="never" />
            <item
                android:id="@+id/menuMediNETAccount"
                android:icon="?attr/actionIconPerson"
                android:title="@string/account"
                app:showAsAction="never" />
            <item
                android:id="@+id/menuMediNETGroups"
                android:icon="?attr/actionIconGroup"
                android:title="@string/groups"
                app:showAsAction="never" />
            <item
                android:id="@+id/menuMediNETForum"
                android:icon="?attr/actionIconChat"
                android:title="@string/forum"
                app:showAsAction="never" />
        </menu>
    </item>

    <!--<item
        android:id="@+id/menuMediNETForward"
        android:showAsAction="never"
        android:title="@string/forward"/>
    <item
        android:id="@+id/menuMediNETBack"
        android:showAsAction="never"
        android:title="@string/back"/>-->

</menu>
